Fix: preloader z-index on mobile.

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 9999;
 
   svg {
     width: 20vw;
